# cairo

./: .spr.yml  Cargo.toml  README.md
corelib/: array.cairo  serde.cairo
crates/cairo-lang-compiler/src/: diagnostics.rs  diagnostics_test.rs
crates/cairo-lang-defs/src/: test.rs
crates/cairo-lang-lowering/src/: fmt.rs  ids.rs  lib.rs  mandatory_calls.rs  objects.rs  test.rs
crates/cairo-lang-parser/src/: parser_test.rs  test_utils.rs
crates/cairo-lang-plugins/src/: test.rs
crates/cairo-lang-runner/src/: cli.rs
crates/cairo-lang-semantic/src/: test_utils.rs
crates/cairo-lang-sierra-ap-change/src/: core_libfunc_ap_change.rs
crates/cairo-lang-sierra-gas/src/: test.rs
crates/cairo-lang-sierra-generator/src/: ap_change_test.rs  block_generator_test.rs  function_generator_test_utils.rs  lifetime_test.rs  local_variables_test.rs
crates/cairo-lang-starknet/cairo_level_tests/: lib.cairo
crates/cairo-lang-starknet/src/: plugin.rs
crates/cairo-lang-starknet/test_data/: test_contract.cairo  test_contract.casm  (+4 more)
crates/defs/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/filesystem/: Cargo.toml
crates/sierra_generator/: Cargo.toml
crates/starknet/: Cargo.toml
crates/starknet/examples/: contract.cairo
crates/starknet/src/: cli.rs  contract.rs  contract_test.rs  finder.rs  lib.rs
examples/: fib_array.cairo
sierra/src/: effects.rs  error.rs  extensions.rs  lib.rs  ref_value.rs  resources.rs  soundness.rs
sierra/tests/: fibonacci_jumps_test.rs
tests/: Cargo.toml  e2e_test.rs  examples_test.rs
tests/test_data/: fib_local.sierra
(+97 files in other folders)
