[package]
name = "starknet"
version.workspace = true
edition.workspace = true

[dependencies]
compiler = { path = "../compiler" }
defs = { path = "../defs" }
filesystem = { path = "../filesystem" }
parser = { path = "../parser" }
semantic = { path = "../semantic" }
serde.workspace = true
serde_json.workspace = true
syntax = { path = "../syntax" }
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
semantic = { path = "../semantic", features = ["testing"] }
utils = { path = "../utils" }
